fis issues in user management